--- a/irisflower.ipynb
+++ b/irisflower.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1vm8vXUADl11JZWxi2KMWHtQ5jQqDIedw",
-      "authorship_tag": "ABX9TyORwTyi4KaOd3HqffrpVsWs",
+      "authorship_tag": "ABX9TyNDByfxA6ZrC3D+2vkBAGT2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -957,7 +957,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sns.countplot(x = 'species', data = iris, palette = \"Set2\")\n",
+        "sns.countplot(x = 'species', data = iris, palette = 'Set2')\n",
         "plt.show()"
       ],
       "metadata": {
