--- a/irisflower.ipynb
+++ b/irisflower.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1vm8vXUADl11JZWxi2KMWHtQ5jQqDIedw",
-      "authorship_tag": "ABX9TyMxRBfmcgbzndD56YaKDRT/",
+      "authorship_tag": "ABX9TyPhEnDGB3CFE8DWcRiFkv8e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2986,31 +2986,29 @@
     {
       "cell_type": "code",
       "source": [
-        "data = {\n",
+        "sample = pd.DataFrame({\n",
         "    'sepal length (cm)': [5.2],\n",
         "    'sepal width (cm)': [3.6],\n",
         "    'petal length (cm)': [1.4],\n",
         "    'petal width (cm)': [0.2]\n",
-        "}\n",
-        "trail = pd.DataFrame(data)\n",
-        "\n",
-        "result = Model.predict(trail)\n",
-        "print(\"Result Species:\", result[0])"
+        "})\n",
+        "result = Model2.predict(sample)\n",
+        "print(\"Predicted species:\", result[0])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "25AYHM7yp36A",
-        "outputId": "77ab1df5-78e9-409e-b2bf-32a8ca70d1d1"
+        "outputId": "810b51c4-5139-4e3a-d013-d41a7d2b9179"
       },
-      "execution_count": 56,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Result Species: 0\n"
+            "Predicted species: 0\n"
           ]
         }
       ]
@@ -3019,7 +3017,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "kzGVItcvrdOy"
+        "id": "Qiybj1hXsXKd"
       },
       "execution_count": null,
       "outputs": []
